fix: order and product order api docs
